test_programs/compile_failure/noirc_frontend_tests_non_u32_as_array_length/src/main.nr

        global ARRAY_LEN: u8 = 3;

        fn main() {
            let _a: [u32; ARRAY_LEN] = [1, 2, 3];
        }
    